[package]
authors = ["Timothy Meade <zt.tmzt@gmail.com>"]
name = "isymtope"
version = "0.3.0"

[dependencies.compiler-service]
optional = true
path = "./compiler-service"

[dependencies.isymtope-ast-common]
default-features = false
optional = true
path = "./isymtope-ast-common"

[dependencies.isymtope-build]
default-features = false
optional = true
path = "./isymtope-build"

[dependencies.isymtope-cli]
default-features = false
optional = true
path = "./isymtope-cli"

[dependencies.isymtope-data]
optional = true
path = "./isymtope-data"

[dependencies.isymtope-generate]
optional = true
path = "./isymtope-generate"

[dependencies.isymtope-server]
default-features = false
optional = true
path = "./isymtope-server"

[dependencies.isymtope-wasm]
default-features = false
optional = true
path = "./isymtope-wasm"

[dependencies.wasm-log]
default-features = false
optional = true
path = "./wasm-log"

[features]
playground_api = ["isymtope-server/playground_api"]
site_app = ["isymtope-server/site_app"]

[profile.dev]
debug-assertions = true

[workspace]
