[package]
authors = ["Timothy Meade <zt.tmzt@gmail.com>"]
name = "isymtope-actix"
version = "0.1.0"

[dependencies]
actix = "0.5.6"
bytes = "0.4.6"
dotenv = "0.11.0"
env_logger = "0.5.8"
futures = "0.1"
lazy_static = "1.0.0"
log = "0.4.1"
openssl-probe = "0.1.2"
regex = "0.2.10"
serde_json = "1.0.16"

[dependencies.actix-web]
features = ["alpn"]
version = "0.5.1"

[dependencies.chrono]
features = ["serde"]
optional = true
version = "0.4.2"

[dependencies.isymtope-ast-common]
path = "../isymtope-ast-common"

[dependencies.isymtope-parser]
path = "../isymtope-parser"

[dependencies.isymtope-build]
path = "../isymtope-build"

[dependencies.isymtope-generate]
path = "../isymtope-generate"

[dependencies.redis-async]
optional = true
version = "0.2.0"

[dependencies.serde]
optional = true
version = "1.0.40"

[dependencies.serde_derive]
optional = true
version = "1.0.40"

[dependencies.uuid]
optional = true
version = "0.6.3"

[features]
playground_api = [
    "chrono",
    "serde_derive",
    "serde",
    "redis-async",
    "uuid",
]
