[package]
authors = ["Timothy Meade <zt.tmzt@gmail.com>"]
name = "isymtope-ast-common"
version = "0.1.0"

[dependencies]
failure = "0.1.1"
itertools = "0.7.6"
lazy_static = "1.0.0"
linked-hash-map = "0.5.0"
log = "0.3.9"
rand = "0.4.2"
regex = "0.2.5"

[dependencies.uuid]
features = ["v4"]
optional = true
version = "0.6.0"

[dependencies.wasm-log]
optional = true
path = "../wasm-log"

[features]
default = []
types = []
uuid_v4 = ["uuid"]
wasm = ["wasm-log"]
