[package]
authors = ["Timothy Meade <zt.tmzt@gmail.com>"]
build = "build.rs"
name = "isymtope-build"
version = "0.3.0"

[build-dependencies.lalrpop]
version = "0.14.0"

[dependencies]
failure = "0.1.1"
itertools = "0.6.0"
lalrpop-util = "0.14.0"
lazy_static = "0.2.11"
linked-hash-map = "0.5.0"
log = "0.3.9"
rand = "0.3.20"
regex = "0.2.2"
serde_json = "1.0.6"

[dependencies.isymtope-ast-common]
path = "../isymtope-ast-common/"

[dependencies.time]
optional = true
version = "0.1.39"

[dependencies.uuid]
features = ["v4"]
version = "0.5.1"

[dependencies.wasm-log]
optional = true
path = "../wasm-log"

[build-dependencies]
ructe = "0.3.10"

[features]
default = ["session_time"]
include_templates = []
session_time = ["time"]
wasm = ["wasm-log"]
