[package]
authors = ["Timothy Meade <zt.tmzt@gmail.com>"]
build = "build.rs"
name = "isymtope-build"
version = "0.3.0"

[build-dependencies]
lalrpop = "0.14.0"

[dependencies]
failure = "0.1.1"
itertools = "0.6.0"
lalrpop-util = "0.14.0"
linked-hash-map = "0.5.0"
log = "0.3.9"
regex = "0.2.2"
serde_json = "1.0.6"

[dependencies.isymtope-ast-common]
path = "../isymtope-ast-common/"

[dependencies.isymtope-data]
path = "../isymtope-data"

[dependencies.wasm-log]
optional = true
path = "../wasm-log"

[features]
include_templates = []
uuid_v4 = ["isymtope-ast-common/uuid_v4"]
wasm = ["wasm-log"]
