[package]
authors = ["Timothy Meade <zt.tmzt@gmail.com>"]
name = "isymtope-cli"
version = "0.1.0"

[dependencies]
dotenv = "0.11.0"
lazy_static = "1.0.0"
quicli = "0.2.0"

[dependencies.isymtope-ast-common]
path = "../isymtope-ast-common/"

[dependencies.isymtope-build]
features = [
    "include_templates",
    "uuid_v4",
]
path = "../isymtope-build"

[dependencies.isymtope-generate]
path = "../isymtope-generate"
