[package]
authors = ["Timothy Meade <zt.tmzt@gmail.com>"]
name = "isymtope-generate"
version = "0.1.0"

[dependencies]
failure = "0.1.1"
lazy_static = "1.0.0"
regex = "0.2.5"

[dependencies.isymtope-ast-common]
features = ["uuid_v4"]
path = "../isymtope-ast-common/"

[dependencies.isymtope-build]
path = "../isymtope-build/"

[features]
default = []
uuid_v4 = ["isymtope-build/uuid_v4"]
