[package]
authors = ["Timothy Meade <zt.tmzt@gmail.com>"]
name = "isymtope-generate"
version = "0.1.0"

[dependencies]
failure = "0.1.1"
lazy_static = "1.0.0"
regex = "0.2.10"

[dependencies.isymtope-ast-common]
default-features = false
path = "../isymtope-ast-common/"

[dependencies.isymtope-build]
default-features = false
path = "../isymtope-build/"

[dependencies.wasm-log]
optional = true
path = "../wasm-log"

[features]
default = []
uuid_v4 = [
    "isymtope-ast-common/uuid_v4",
    "isymtope-build/uuid_v4",
]
wasm = ["wasm-log"]
