[package]
name = "isymtope-parser"
version = "0.1.0"
authors = ["Timothy Meade <zt.tmzt@gmail.com>"]
build = "build.rs"

[build-dependencies]
lalrpop = "0.14.0"

[dependencies]
failure = "0.1.1"
itertools = "0.6.0"
lalrpop-util = "0.14.0"
linked-hash-map = "0.5.0"
log = "0.3.9"
regex = "0.2.2"
serde_json = "1.0.6"

[dependencies.isymtope-ast-common]
path = "../isymtope-ast-common/"

[dependencies.wasm-log]
optional = true
path = "../wasm-log"

[features]
uuid_v4 = ["isymtope-ast-common/uuid_v4"]
wasm = ["wasm-log"]
