[package]
authors = ["Timothy Meade <zt.tmzt@gmail.com>"]
name = "isymtope-server"
version = "0.1.0"

[dependencies]
colored = "1.6.0"
data-encoding = "2.1.0"
dotenv = "0.10.1"
failure = "0.1.1"
futures = "0.1.18"
hyper = "0.11.15"
hyper-staticfile = "0.1.1"
lazy_static = "1.0.0"
log = "0.4.1"
pretty_env_logger = "0.2.0"
rand = "0.3.20"
regex = "0.2.5"
tokio = "0.0.0"
tokio-core = "0.1.12"

[dependencies.isymtope-ast-common]
path = "../isymtope-ast-common/"

[dependencies.isymtope-build]
features = ["include_templates"]
path = "../isymtope-build/"

[dependencies.time]
optional = true
version = "0.1.39"

[features]
default = []
session_time = ["time"]
