[package]
authors = ["Timothy Meade <zt.tmzt@gmail.com>"]
build = "build.rs"
name = "isymtope-server"
version = "0.1.0"

[dependencies]
colored = "1.6.0"
data-encoding = "2.1.1"
dotenv = "0.11.0"
failure = "0.1.1"
futures = "0.1.18"
hyper = "0.11.18"
hyper-staticfile = "0.1.1"
lazy_static = "1.0.0"
log = "0.4.1"
pretty_env_logger = "0.2.2"
rand = "0.4.2"
regex = "0.2.5"
tokio = "0.1.1"
tokio-core = "0.1.12"

[dependencies.compiler-service]
optional = true
path = "../compiler-service"

[dependencies.isymtope-ast-common]
path = "../isymtope-ast-common/"

[dependencies.isymtope-build]
features = [
    "include_templates",
    "uuid_v4",
]
path = "../isymtope-build/"

[dependencies.isymtope-generate]
path = "../isymtope-generate/"

[dependencies.oauth2]
optional = true
version = "1.3.0"

[dependencies.redis-async]
optional = true
version = "0.2.0"

[dependencies.time]
optional = true
version = "0.1.39"

[dependencies.url]
optional = true
version = "1.7.0"

[features]
cookies = []
copy_wasm = []
default = []
github_auth = [
    "url",
    "oauth2",
]
playground_api = ["compiler-service"]
redis_session = ["redis-async"]
session_time = ["time"]
site_app = []
